fixed so all eventcontent is readable

--- a/src/themes/etf2l.org-dark.scss
+++ b/src/themes/etf2l.org-dark.scss
@@ -201,7 +201,7 @@
     color: #e68624!important;
   }
 
-  .matchround {
+  .eventcontent {
     color: rgba(255,255,255,.75);
   }
 
